# fitcoach-ai

./: .dev.vars.example  .env.example  .gitignore  .pre-commit-config.yaml  AI-Fitness-Coaching-Assistant-Master-Plan.md  Makefile  README.md  docker-compose.yml  render.yaml  wrangler.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_generate.py  routes_health.py  routes_learning.py  routes_web.py
backend/app/core/: errors.py  logging.py  settings.py
backend/app/evals/: README.md  __init__.py  runner.py  workout_plan_eval_dataset_v1.json  workout_plan_eval_rubric_v1.json
backend/app/examples/: requests.http
backend/app/feedback/: __init__.py  review_loop.py  store.py
backend/app/learning/: __init__.py  loader.py  models.py
backend/app/learning/content/: overview.toml
backend/app/llm/: openai_client.py  pricing.py  prompts.py
backend/app/middleware/: request_logging.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  index.py  qdrant_client.py  retriever.py
backend/app/schemas/: __init__.py  common.py  feedback.py  profile.py  workout_plan.py
backend/app/services/: __init__.py  workout_plan_generator.py
backend/tests/: test_eval_assets.py  test_knowledge_base_assets.py  test_learning_portal.py
backend/tests/api/: test_generate_workout_plan.py  test_web_home.py
backend/tests/evals/: test_runner.py
backend/tests/feedback/: test_review_loop.py  test_store.py
backend/tests/integration/: test_openai_workout_plan_integration.py
backend/tests/learning/: test_quiz_cli.py  test_repo_drills.py
backend/tests/llm/: test_openai_client.py  test_prompts.py
backend/tests/rag/: test_chunking.py  test_embeddings.py  test_index.py  test_retrieval_quality.py  test_retriever.py
backend/tests/schemas/: test_domain_schemas.py
backend/tests/services/: test_workout_plan_generator.py
cloudflare/: langfuse.mjs  (+5 more)
(+155 files in other folders)
