[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.137.1",
    "jinja2>=3.1.6",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
learning-quiz = "app.learning.quiz.cli:main"
learning-drills = "app.learning.drills.runner:main"
feedback-review-loop = "app.feedback.review_loop:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that call real external services",
]
